@@ -1,4 +1,7 @@
 
+2009-04-10 19:53 Ali aliov@xfce.org 
+	 * : Change the session restart style to if running when we are exiting
+
 2009-04-10 16:15 Ali aliov@xfce.org 
 	 * : Fix the session restart command in the previous revision
 
